Add female variation to frames

--- a/app/views/frames/_frame.html.slim
+++ b/app/views/frames/_frame.html.slim
@@ -5,4 +5,4 @@ a.ui.card href=edit_frame_path(frame)
   .content
     i.right.floated.icon class=(frame.video? ? 'video' : 'image')
     .header = frame.title
-    /.meta = frame.tags.join(', ')
+    .meta = frame.tags
