--- a/app/views/frames/_frame.html.slim
+++ b/app/views/frames/_frame.html.slim
@@ -9,4 +9,4 @@ a.ui.card href=edit_frame_path(frame)
   .content
     i.right.floated.icon class=(frame.video? ? 'video' : 'image')
     .header = frame.title
-    .meta = frame.tag_list
+    .meta = frame.tags
