--- a/app/views/frames/_frame.html.slim
+++ b/app/views/frames/_frame.html.slim
@@ -4,8 +4,9 @@ a.ui.card href=edit_frame_path(frame)
     .ui.instant.fade.reveal
       .visible.content
         = image_tag frame.thumbnail(:male)
-      .hidden.content
-        = image_tag frame.thumbnail(:female)
+      - if frame.female.present?
+        .hidden.content
+          = image_tag frame.thumbnail(:female)
   .content
     i.right.floated.icon class=(frame.video? ? 'video' : 'image')
     .header = frame.title
