--- a/app/views/frames/index.html.slim
+++ b/app/views/frames/index.html.slim
@@ -4,6 +4,15 @@ h1.ui.dividing.header Frames
 a.ui.teal.basic.button href=new_frame_path
   | New Frame
 
+- if params[:gender] == 'female'
+  a.ui.orange.basic.button href=frames_path(gender: :male)
+    i.male.icon
+    | View Male Thumbnails
+- else
+  a.ui.orange.basic.button href=frames_path(gender: :female)
+    i.female.icon
+    | View Female Thumbnails
+
 - flash.each do |key, value|
   .ui.closable.message class=key
     = value
