--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,6 +19,9 @@ html
         a.item class=('active' if controller_name == 'meditations') href=meditations_path
           i.spa.icon
           | Meditations
+        a.item class=('active' if controller_name == 'musics') href=musics_path
+          i.music.icon
+          | Music
         /a.item class=('active' if controller_name == 'users') href=home_users_path
           i.retweet.icon
           | Users
