--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,10 @@ main {
   flex: 1 1 auto;
 }
 
+p.wrap {
+  word-break: break-all;
+}
+
 .ui.card .image > video {
   width: 100%;
   max-height: 257px;
