--- a/app/views/musics/_form.html.slim
+++ b/app/views/musics/_form.html.slim
@@ -3,6 +3,7 @@
   .ui.grid
     .ten.wide.column
       = f.input :title
+      = f.input :credit
       = f.input :tag_list, input_html: { value: f.object.tag_list.join(", ") }
       = f.input :audio
       
