--- a/app/views/musics/_music.html.slim
+++ b/app/views/musics/_music.html.slim
@@ -4,6 +4,8 @@ tr
     strong = music.title
     br
     em = music.tag_list
+  td.collapsing
+    = music.credit
   td.collapsing.right.aligned
     = music.duration ? music.duration.to_s + "m" : nil
   td.collapsing
