--- a/app/views/musics/_form.html.slim
+++ b/app/views/musics/_form.html.slim
@@ -9,7 +9,7 @@
       
       button.ui.submit.teal.button
         | Save
-      a.ui.button href=frames_path
+      a.ui.button href=musics_path
         | Back
     .six.wide.column
       - if f.object.audio.attached?
