Add search to meditations and frames

--- a/app/assets/stylesheets/application/editor.sass
+++ b/app/assets/stylesheets/application/editor.sass
@@ -29,3 +29,14 @@
 
   .center.aligned.field > label
     text-align: center
+
+.tags a
+  font-style: italic
+  color: inherit
+  opacity: 0.8
+
+  &:hover
+    color: #00b5ad
+
+  &:not(:last-child)::after
+    content: ", "
