--- a/app/views/meditations/index.html.slim
+++ b/app/views/meditations/index.html.slim
@@ -9,14 +9,7 @@ h1.ui.dividing.header Meditations
     i.search.icon
     input type="text" name="q" placeholder="Search..." value=params[:q]
 
-- if params[:tag]
-  a.ui.teal.label href=meditations_path
-    = params[:tag]
-    i.close.icon
-
-- @tags.where.not(name: params[:tag]).each do |tag|
-  a.ui.basic.label href=tagged_meditations_path(tag.name)
-    = tag
+= render 'tags', tags: @tags
 
 - flash.each do |key, value|
   .ui.closable.message class=key
