--- a/app/views/musics/index.html.slim
+++ b/app/views/musics/index.html.slim
@@ -5,7 +5,7 @@ p
   a.ui.teal.basic.button href=new_music_path
     | New Music
 
-= render 'tags', tags: nil
+= render 'tags', tags: @tags, tag_path: :tagged_musics_path
 
 - flash.each do |key, value|
   .ui.closable.message class=key
