Allow meditations to be filtered by other

--- a/app/views/application/_tags.html.slim
+++ b/app/views/application/_tags.html.slim
@@ -13,3 +13,7 @@
         i.fitted.spa.icon
         ' 
       = tag
+
+  - if local_assigns[:other] && params[:tag] != 'other'
+    a.ui.basic.label href=method(tag_path).call('other')
+      | other
