--- a/app/views/meditations/index.html.slim
+++ b/app/views/meditations/index.html.slim
@@ -9,7 +9,7 @@ h1.ui.dividing.header Meditations
     i.search.icon
     input type="text" name="q" placeholder="Search..." value=params[:q]
 
-= render 'tags', tags: @tags, tag_path: :tagged_meditations_path
+= render 'tags', tags: @tags, tag_path: :tagged_meditations_path, other: true
 
 - flash.each do |key, value|
   .ui.closable.message class=key
