Change the title to category

--- a/app/views/frames/_form.html.slim
+++ b/app/views/frames/_form.html.slim
@@ -2,7 +2,7 @@
 = simple_form_for @frame do |f|
   .ui.grid
     .ten.wide.column
-      = f.input :title
+      = f.input :category
       = f.input :tags
       = f.input :male, label: "Replace male media"
       = f.input :female, label: "Replace female media"
