--- a/app/views/frames/_frame.html.slim
+++ b/app/views/frames/_frame.html.slim
@@ -6,5 +6,5 @@ a.ui.card href=edit_frame_path(frame)
       = image_tag thumbnail
   .content
     i.right.floated.icon class=(frame.video? ? 'video' : 'image')
-    .header = frame.title
+    .header = frame.category
     .meta = frame.tags
