--- a/app/views/frames/index.html.slim
+++ b/app/views/frames/index.html.slim
@@ -3,7 +3,7 @@ h1.ui.dividing.header Frames
 
 
 = form_tag request.original_url, method: :get, class: 'ui inline form' do
-  a.ui.teal.basic.button href=new_frame_path
+  /a.ui.teal.basic.button href=new_frame_path
     | New Frame
 
   - if params[:gender] == 'female'
