--- a/app/views/meditations/_meditation.html.slim
+++ b/app/views/meditations/_meditation.html.slim
@@ -21,7 +21,7 @@ tr
         | Incomplete
   td.collapsing
     .ui.compact.tiny.basic.vertical.buttons
-      a.ui.button href=meditation_path(meditation) target="_blank"
+      a.ui.button href=meditation_path(meditation.uuid) target="_blank"
         i class='eye icon'
         | View
       a.ui.button href=edit_meditation_path(meditation)
